Update 다드가(다 들어가) 프로젝트를 시작합니다

--- a/_posts/2019-04/2019-04-21-1.md
+++ b/_posts/2019-04/2019-04-21-1.md
@@ -1,6 +1,74 @@
 ---
 layout: post
-title:  "다드가(다 들어가) 프로젝트를 시작합니다."
+title:  "다드가(다 들어가) 프로젝트를 시작합니다"
 ---
-다드가(다 들어가) 프로젝트를 시작합니다.
+
+평문 로그인(plaintext or cleartext login)과 관련된 글 몇몇을 검색해 보았습니다.
+
+<br>
+[한국사물인터넷협회 홈피, 주민번호와 PW 평문 전송 '말썽'](https://www.boannews.com/media/view.asp?idx=70570)
+
+> 한국사물인터넷협회 웹사이트의 아이디와 비밀번호 입력창과 웹사이트 회원 가입시 수집하는 주민번호가 암호화되지 않고 평문으로 전송되는 것으로 드러났다. 
+
+> 본지에 이를 알려온 제보자는 "한국사물인터넷협회 웹사이트에서 회원 가입시 주민번호 입력을 하도록 되어 있는데, 전송구간에 암호화 적용이 되지 않아 주민번호 전체가 평문으로 전송되고 있다"며 문제를 지적했다.
+
+
+<br>
+[대학 보안의식 '심각'.. 정보유출 무방비](https://www.cisp.or.kr/archives/12621)
+ 
+> 국내 대학들의 보안 인식과 대응 실태가 아직도 열악한 것으로 나타났다. 보안 조치를 제대로 갖추지 않은 상태에서 규제 적용에 대해서만 볼멘소리로 일관해 학내에도 비판이 일고 있다.
+
+> 2일 시민단체인 정보화사회실천연합(이하 정실련)이 서울 소재 대학 28곳에 대해 조사한 결과 64%인 18곳이 여전히 홈페이지에서 개인정보보호 조치를 제대로 취하지 않은 채 방치하고 있는 것으로 나타났다.
+
+
+<br>
+[설날 열차표 예매사이트, 평문전송 취약점 발견](https://www.boannews.com/media/view.asp?idx=45037)
+
+> [보안뉴스 민세아] 설 연휴 열차표 예매를 위한 코레일 예매 사이트에서 코레일멤버십번호와 비밀번호가 암호화되지 않은 채 평문으로 전송되고 있는 사실이 드러났다.
+
+> 해당 취약점을 제보한 성균관대 컴퓨터공학과 정보보안동아리 HIT의 박상민 씨는 이 문제를 한국인터넷진흥원(이하 KISA)에 제보했지만, 별로 대수롭지 않게 대응했다고 아쉬움을 나타냈다. 이와 관련 박 씨는 "KISA 측에서는 같은 네트워크 안에서 패킷을 가로채는 게 쉬운 일이 아니므로 그렇게 급한 이슈사항은 아니라고 말했다"며, “해당 이슈는 몇 시간 만에 해결될 문제가 아니기 때문에 바로 시정하는 것은 힘들다는 답변이 돌아왔다"고 말했다.
+
+<br>
+[로그인 정보 암호화 안했다간...과태료 '탕탕'](https://www.boannews.com/media/view.asp?idx=39888)
+
+> 파일 공유 사이트 11곳을 비롯해 유명 블로그 서비스인 티스토리닷컴(http://www.tistory.com/)에서 로그인 시 아이디와 비밀번호를 암호화하지 않은 채 평문으로 전송하여 문제가 되고 있다.
+
+> 이와 관련 KISA 관계자는 "아이디와 비밀번호를 암호화 하지 않고 서버로 전송할 경우 정보통신망법 제28조(기술적·관리적 조치를 아니한 자)에 의해 법 위반”이라며, "정보통신망법 제76조 1항에 의해 3000만 원 이하의 과태료 등 행정처분을 받을 수 있다"고 밝혔다.
+
+<br>
+[P2P 사이트 대부분, 아이디·비번 평문 전송 '여전'](https://www.boannews.com/media/view.asp?idx=40704)
+
+> 국내 대부분의 P2P 사이트 로그인 관련 ID·PW 데이터가 암호화 전송되지 않고 평문 전송되는 상황이 아직까지 개선되지 않고 있다. 이 같은 내용으로 본지에 제보한 권영서 씨는 "국내 대부분의 P2P 사이트 보안이 많이 취약하다고 해서 직접 한 P2P 사이트에 가입해서 확인해 본 결과, 로그인 관련 패킷들이 평문으로 전송되는 것을 확인했다. 이러한 취약점을 이용하면 누구나 쉽게 ID·PW 스니핑이 가능해 악용할 수 있다"고 밝혔다.
+
+
+
+<br>
+[로그인 보안, 아직도 모르시나요?](https://www.boannews.com/media/view.asp?idx=40472)
+
+> 정보통신망법 위반으로 최대 3000만원까지 과태료 부과 가능
+
+> "구인구직 사이트 구인구직닷컴(http://www.onjob.co.kr/)의 로그인 과정을 캡쳐해 본 결과 아이디와 패스워드가 암호화되지 않은 채 서버로 전달되는 것을 확인할 수 있었다"고 밝혔다.
+
+<br>
+[SKT 홈페이지 보안접속 해제하면 해킹 위험](https://www.cisp.or.kr/archives/11578)
+
+> SK텔레콤의 홈페이지 로그인 시 보안접속 체크 유무에 따라 해킹의 위험에 노출돼 개선이 필요하다는 주장이 제기됐다.
+
+> 시민단체 정보화사회실천연합(이하 정실련)은 10일 SK텔레콤의 홈페이지 'T월드'로그인 시 '보안접속' 체크박스를 해제하면 비밀번호에 대해 전송구간 암호화가 돼 있지 않은 것으로 확인됐다며 이같이 지적했다.
+
+> 정실련은 로그인시 비밀번호의 암호화 처리는 사용자의 선택사항이 아닌, 서비스 제공자가 반드시 준수해야 하는 안전성확보조치 사항이므로 개선이 시급하다고 지적했다.
+
+<br>
+[새누리 등 홈피 개인정보 유출돼도 속수무책](http://m.gobalnews.com/news/articleView.html?idxno=1218)
+
+> 새누리당 등 주요 정당 홈페이지의 로그인과 회원가입 페이지에서 개인정보가 전송될 때 암호화가 되지 않은 것으로 알려져 주요 정당의 허술한 보안 의식이 도마 위에 올랐다.
+
+> 19일 <CBS>는 정보화사회실천연합(이하 정실련)이 인터넷 패킷 분석 프로그램인 '와이어샤크'를 이용해 분석한 결과, 새누리당과 진보신당, 통합진보당 홈페이지의 로그인과 회원가입 페이지에서 개인정보가 전송될 때 암호화가 되지 않았다고 보도했다.
+
+<br>
+평문 로그인의 위험성에 대해서는 그간 계속해서 강조되어져 왔었지만 아직도 그러한 취약점을 가지고 있는 사이트가 많이 존재합니다. 그런데, 그러한 사이트의 취약점을 직접 제보를 하면 심각성에 대해 인지를 하지 못하고 제대로 된 조치가 되지 않는 경우를 종종 봅니다. 제보자는 결국 이렇게 언론을 통하거나 개인 블로그를 통해 그 취약점을 얘기하게 되는데요, 개인도 그렇고 사이트 관리자도 그렇고 서로 얼굴을 붉히는 경우가 다분합니다. 저 또한 이러한 취약점을 찾아 내어도 알려 주는 경우가 거의 없습니다. 제보해봤자 욕을 먹는 것이 일반적이라서요. 이러한 minor한 취약점을 bugbounty 회사에서 받아줄 리도 만무하고 KISA에서도 웹 취약점은 처리하지 않고 있는 상황입니다.
+
+그래서 "다드가" 프로젝트를 시작하게 되었습니다. 몇몇 사이트들의 취약점을 얘기하면 얼굴을 붉히게 되지만, 대놓고 수백개의 사이트를 대상으로 점검해 보면 어떨까 하구요. 처음은 일단 국내 대학교 사이트들을 중심으로 테스트를 진행할 예정이고, 향후 고등학교, 중학교, 초등학교, 유치원, 정부 기관, 병원 등등 다양한 사이트들을 대상으로 테스트를 확대해 나갈 계획에 있습니다.
+
+시스템이 어느 정도 구축이 되면 정기적인 테스트(대략 일주일에 한 번)를 하여 평문 로그인을 하는 사이트 목록을 지속적으로 공개할 예정입니다(테스트는 자동화를 통하여 나중에 가서는 수백 수천개 사이트라 하더라도 단시간에 테스트를 완료할 수 있도록 자동화하고 있음).
 
