Update Update 다드가(다 들어가) 프로젝트를 시작합니다

--- a/_posts/2019-04/2019-04-21-1.md
+++ b/_posts/2019-04/2019-04-21-1.md
@@ -66,9 +66,11 @@ title:  "다드가(다 들어가) 프로젝트를 시작합니다"
 > 19일 <CBS>는 정보화사회실천연합(이하 정실련)이 인터넷 패킷 분석 프로그램인 '와이어샤크'를 이용해 분석한 결과, 새누리당과 진보신당, 통합진보당 홈페이지의 로그인과 회원가입 페이지에서 개인정보가 전송될 때 암호화가 되지 않았다고 보도했다.
 
 <br>
-평문 로그인의 위험성에 대해서는 그간 계속해서 강조되어져 왔었지만 아직도 그러한 취약점을 가지고 있는 사이트가 많이 존재합니다. 그런데, 그러한 사이트의 취약점을 직접 제보를 하면 심각성에 대해 인지를 하지 못하고 제대로 된 조치가 되지 않는 경우를 종종 봅니다. 제보자는 결국 이렇게 언론을 통하거나 개인 블로그를 통해 그 취약점을 얘기하게 되는데요, 개인도 그렇고 사이트 관리자도 그렇고 서로 얼굴을 붉히는 경우가 다분합니다. 저 또한 이러한 취약점을 찾아 내어도 알려 주는 경우가 거의 없습니다. 제보해봤자 욕을 먹는 것이 일반적이라서요. 이러한 minor한 취약점을 bugbounty 회사에서 받아줄 리도 만무하고 KISA에서도 웹 취약점은 처리하지 않고 있는 상황입니다.
+평문 로그인의 위험성에 대해서는 그간 계속해서 강조되어져 왔었지만 아직도 그러한 취약점을 가지고 있는 사이트가 많이 존재합니다. 그런데, 그러한 사이트의 취약점을 직접 제보를 하면 심각성에 대해 인지를 하지 못하고 제대로 된 조치가 되지 않는 경우를 종종 봅니다. 제보자는 결국 이렇게 언론을 통하거나 개인 블로그를 통해 그 취약점을 얘기하게 되는데요, 개인도 그렇고 사이트 관리자도 그렇고 서로 얼굴을 붉히는 경우가 다분합니다.
 
-그래서 "다드가" 프로젝트를 시작하게 되었습니다. 몇몇 사이트들의 취약점을 얘기하면 얼굴을 붉히게 되지만, 대놓고 수백개의 사이트를 대상으로 점검해 보면 어떨까 하구요. 처음은 일단 국내 대학교 사이트들을 중심으로 테스트를 진행할 예정이고, 향후 고등학교, 중학교, 초등학교, 유치원, 정부 기관, 병원 등등 다양한 사이트들을 대상으로 테스트를 확대해 나갈 계획에 있습니다.
+저 또한 이러한 취약점을 찾아 내어도 잘 알려 주지 않습니다. 기술적인 난이도도 낮고, 제보해봤자 좋은 소리를 들을수도 있는게 아니라서요. 이러한 minor한 취약점을 bugbounty 회사에서 받아줄 리도 만무하고, KISA에서도 웹 취약점은 취급하지 않고 있는 상황입니다.
+
+그래서 "다드가" 프로젝트를 시작하게 되었습니다. 몇몇 사이트들의 취약점을 얘기하면 얼굴을 붉히게 되지만, 대놓고 수백개의 사이트를 대상으로 점검해서 공개하면 어떨까 하구요. 처음은 일단 국내 대학교 사이트들을 중심으로 테스트를 진행할 예정이고, 향후 고등학교, 중학교, 초등학교, 유치원, 정부 기관, 병원 등등 다양한 사이트들을 대상으로 테스트를 확대해 나갈 계획에 있습니다.
 
 시스템이 어느 정도 구축이 되면 정기적인 테스트(대략 일주일에 한 번)를 하여 평문 로그인을 하는 사이트 목록을 지속적으로 공개할 예정입니다(테스트는 자동화를 통하여 나중에 가서는 수백 수천개 사이트라 하더라도 단시간에 테스트를 완료할 수 있도록 자동화하고 있음).
 
